Chessboard fix + Chess.js

--- a/index.html
+++ b/index.html
@@ -9,78 +9,78 @@
 <body>
     <div class="chessboard">
         <div class="1 a"></div>
-        <div class="2 a"></div>
-        <div class="3 a"></div>
-        <div class="4 a"></div>
-        <div class="5 a"></div>
-        <div class="6 a"></div>
-        <div class="7 a"></div>
-        <div class="8 a"></div>
-
         <div class="1 b"></div>
-        <div class="2 b"></div>
-        <div class="3 b"></div>
-        <div class="4 b"></div>
-        <div class="5 b"></div>
-        <div class="6 b"></div>
-        <div class="7 b"></div>
-        <div class="8 b"></div>
-
         <div class="1 c"></div>
-        <div class="2 c"></div>
-        <div class="3 c"></div>
-        <div class="4 c"></div>
-        <div class="5 c"></div>
-        <div class="6 c"></div>
-        <div class="7 c"></div>
-        <div class="8 c"></div>
-
         <div class="1 d"></div>
-        <div class="2 d"></div>
-        <div class="3 d"></div>
-        <div class="4 d"></div>
-        <div class="5 d"></div>
-        <div class="6 d"></div>
-        <div class="7 d"></div>
-        <div class="8 d"></div>
-
         <div class="1 e"></div>
-        <div class="2 e"></div>
-        <div class="3 e"></div>
-        <div class="4 e"></div>
-        <div class="5 e"></div>
-        <div class="6 e"></div>
-        <div class="7 e"></div>
-        <div class="8 e"></div>
-
         <div class="1 f"></div>
-        <div class="2 f"></div>
-        <div class="3 f"></div>
-        <div class="4 f"></div>
-        <div class="5 f"></div>
-        <div class="6 f"></div>
-        <div class="7 f"></div>
-        <div class="8 f"></div>
-
         <div class="1 g"></div>
-        <div class="2 g"></div>
-        <div class="3 g"></div>
-        <div class="4 g"></div>
-        <div class="5 g"></div>
-        <div class="6 g"></div>
-        <div class="7 g"></div>
-        <div class="8 g"></div>
-
         <div class="1 h"></div>
+
+        <div class="2 a"></div>
+        <div class="2 b"></div>
+        <div class="2 c"></div>
+        <div class="2 d"></div>
+        <div class="2 e"></div>
+        <div class="2 f"></div>
+        <div class="2 g"></div>
         <div class="2 h"></div>
+
+        <div class="3 a"></div>
+        <div class="3 b"></div>
+        <div class="3 c"></div>
+        <div class="3 d"></div>
+        <div class="3 e"></div>
+        <div class="3 f"></div>
+        <div class="3 g"></div>
         <div class="3 h"></div>
+
+        <div class="4 a"></div>
+        <div class="4 b"></div>
+        <div class="4 c"></div>
+        <div class="4 d"></div>
+        <div class="4 e"></div>
+        <div class="4 f"></div>
+        <div class="4 g"></div>
         <div class="4 h"></div>
+
+        <div class="5 a"></div>
+        <div class="5 b"></div>
+        <div class="5 c"></div>
+        <div class="5 d"></div>
+        <div class="5 e"></div>
+        <div class="5 f"></div>
+        <div class="5 g"></div>
         <div class="5 h"></div>
+
+        <div class="6 a"></div>
+        <div class="6 b"></div>
+        <div class="6 c"></div>
+        <div class="6 d"></div>
+        <div class="6 e"></div>
+        <div class="6 f"></div>
+        <div class="6 g"></div>
         <div class="6 h"></div>
+
+        <div class="7 a"></div>
+        <div class="7 b"></div>
+        <div class="7 c"></div>
+        <div class="7 d"></div>
+        <div class="7 e"></div>
+        <div class="7 f"></div>
+        <div class="7 g"></div>
         <div class="7 h"></div>
+
+        <div class="8 a"></div>
+        <div class="8 b"></div>
+        <div class="8 c"></div>
+        <div class="8 d"></div>
+        <div class="8 e"></div>
+        <div class="8 f"></div>
+        <div class="8 g"></div>
         <div class="8 h"></div>
     </div>
-
+    <p id="protocol-line"></p>
     <!-- <button id="invert">Invert the chessboard!</button> -->
 
     <script src="script.js"></script>
