Castles, En Passant, Promotion

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
     </header>
     <main id="page1">
+        <section class="player-info" id="white"></section>
         <section class="game">
             <div class="chessboard">
                 <div class="1 a"></div>
@@ -92,8 +93,13 @@
                 <div class="8 g"></div>
                 <div class="8 h"></div>
             </div>
-            <p id="protocol-line">This is a protocol line, please do not delete me.</p>
+            <div class="cb-tools">
+                <button class="castle">O-O-O</button>
+                <p id="protocol-line" id="black">This is a protocol line, do not delete me.</p>
+                <button class="castle">O-O</button>
+            </div>
         </section>
+        <section class="player-info"></section>
     </main>
     <main id="page2" style="display: none;"></main>
     <main id="page3" style="display: none;"></main>
