--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <div id="piece-gain">
                 <h4>Získané figury:</h4>
                 <ul>
-                    <li>Pěšci: <span id="pawn-count">0</span></li>
-                    <li>Jezdci: <span id="knight-count">0</span></li>
-                    <li>Střelci: <span id="bishop-count">0</span></li>
-                    <li>Věže: <span id="rook-count">0</span></li>
-                    <li>Dámy: <span id="queen-count">0</span></li>
+                    <li>Pěšci: <span data-piece="P">0</span></li>
+                    <li>Jezdci: <span data-piece="N">0</span></li>
+                    <li>Střelci: <span data-piece="B">0</span></li>
+                    <li>Věže: <span data-piece="R">0</span></li>
+                    <li>Dámy: <span data-piece="Q">0</span></li>
                 </ul>
             </div>
         </section>
@@ -112,7 +112,7 @@
             </div>
             <div class="cb-tools">
                 <button class="castle">O-O-O</button>
-                <p id="protocol-line" id="black">This is a protocol line, do not delete me.</p>
+                <p id="protocol-line" id="black">Můžete začít</p>
                 <button class="castle">O-O</button>
             </div>
         </section>
@@ -125,11 +125,11 @@
             <div id="piece-gain">
                 <h4>Získané figury:</h4>
                 <ul>
-                    <li>Pěšci: <span id="pawn-count">0</span></li>
-                    <li>Jezdci: <span id="knight-count">0</span></li>
-                    <li>Střelci: <span id="bishop-count">0</span></li>
-                    <li>Věže: <span id="rook-count">0</span></li>
-                    <li>Dámy: <span id="queen-count">0</span></li>
+                    <li>Pěšci: <span data-piece="P">0</span></li>
+                    <li>Jezdci: <span data-piece="N">0</span></li>
+                    <li>Střelci: <span data-piece="B">0</span></li>
+                    <li>Věže: <span data-piece="R">0</span></li>
+                    <li>Dámy: <span data-piece="Q">0</span></li>
                 </ul>
             </div>
         </section>
