--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
                 <p id="protocol-line" id="black">Můžete začít</p>
                 <button class="castle">O-O</button>
             </div>
+            <div class="pgn-fen">
+                <button id="pgn">Zkopírovat PGN</button>
+                <button id="fen">Zkopírovat FEN</button>
+            </div>
         </section>
         <section class="game player-info" id="black">
             <div id="basic-info">
