--- a/game.html
+++ b/game.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="chess.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://www.svgrepo.com/show/48724/pawn.svg" type="image/x-icon">
+    <style>
+        main{
+            height: -webkit-fill-available;
+        }
+    </style>
 </head>
 <body>
     <header>
