--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
             height: -webkit-fill-available;
         }
     </style>
+    <link rel="stylesheet" href="responzivita.css">
 </head>
 <body>
     <header>
