RespCSS Tabs add

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Šachy</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://www.svgrepo.com/show/48724/pawn.svg" type="image/x-icon">
+    <link rel="stylesheet" href="responzivita.css">
 </head>
 <body>
     <header>
