--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
         <p>Prozatím tu není nic k vidění. Ale nezoufej, můžeš si třeba něco <a href="./game.html">zahrát</a>.</p>
         <p>Nebo se chceš podívat na <a href="https://github.com/M-Brachtl/chess_web">GitHub</a>?</p>
     </main>
-
+    <footer>
+        <!-- kontaktní info, credits -->
+        <p>Matěj Brachtl</p>
+        <p>Email: <a href="mailto:bra42176@spseol.cz">bra42176@spseol.cz</a></p>
+        <p onclick="creditsShow()" style="cursor: pointer;">Credits</p>
+    </footer>
+    <footer id="credits-footer">
+        <p>Nápad: Matěj Brachtl</p>
+        <p>Design: Matěj Brachtl</p>
+        <p>Kód: Matěj Brachtl</p>
+        <p>Test: Matěj Brachtl, Klaudie Stuchlíková</p>
+        <p>Klávesová zkratka pro '@' (AltGr + V): Klaudie Stuchlíková</p>
+        <p>Veřejně dostupné využité prostředky: Wikimedia, SVGRepo, Chess.js, Stockfish, Browserify</p>
+        <button onclick="creditsHide()">Zavřít</button>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
