--- a/tutorial.html
+++ b/tutorial.html
@@ -34,6 +34,21 @@
             display: block;
         }
     </style>
+    <footer>
+        <!-- kontaktní info, credits -->
+        <p>Matěj Brachtl</p>
+        <p>Email: <a href="mailto:bra42176@spseol.cz">bra42176@spseol.cz</a></p>
+        <p>Credits</p>
+    </footer>
+    <footer id="credits-footer">
+        <p>Nápad: Matěj Brachtl</p>
+        <p>Design: Matěj Brachtl</p>
+        <p>Kód: Matěj Brachtl</p>
+        <p>Test: Matěj Brachtl, Klaudie Stuchlíková</p>
+        <p>Klávesová zkratka pro '@' (AltGr + V): Klaudie Stuchlíková</p>
+        <p>Veřejně dostupné využité prostředky: Wikimedia, SVGRepo, Chess.js, Stockfish, Browserify</p>
+        <button onclick="creditsHide()">Zavřít</button>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
