--- a/game.html
+++ b/game.html
@@ -148,7 +148,7 @@
         <!-- kontaktní info, credits -->
         <p>Matěj Brachtl</p>
         <p>Email: <a href="mailto:bra42176@spseol.cz">bra42176@spseol.cz</a></p>
-        <p>Credits</p>
+        <p onclick="creditsShow()" style="cursor: pointer;">Credits</p>
     </footer>
     <footer id="credits-footer">
         <p>Nápad: Matěj Brachtl</p>
