--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Nápad: Matěj Brachtl</p>
         <p>Design: Matěj Brachtl</p>
         <p>Kód: Matěj Brachtl</p>
-        <p>Test: Matěj Brachtl, Klaudie Stuchlíková</p>
+        <p>Test: Matěj Brachtl, Klaudie Stuchlíková, Adam Černý</p>
         <p>Klávesová zkratka pro '@' (AltGr + V): Klaudie Stuchlíková</p>
         <p>Veřejně dostupné využité prostředky: Wikimedia, SVGRepo, Chess.js, Stockfish, Browserify</p>
         <button onclick="creditsHide()">Zavřít</button>
