--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Šachy</title>
+    <title>Magchess</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://www.svgrepo.com/show/48724/pawn.svg" type="image/x-icon">
     <link rel="stylesheet" href="responzivita.css">
 </head>
 <body>
     <header>
-        <span>Šachy</span>
+        <span>Magchess</span>
         <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 104.38 122.88"><defs><style>.cls-1{fill-rule:evenodd;}</style></defs><title>chess-pawn</title><path class="cls-1" d="M35.73,32.57a20.45,20.45,0,1,1,32.91,0Zm35.06,3.88a7.1,7.1,0,0,1,6.17,7h0a7.11,7.11,0,0,1-6.61,7.06H34a7.1,7.1,0,0,1-6.6-7.06h0a7.1,7.1,0,0,1,6.17-7ZM63.33,54.4c.91,14.57,6,26.07,18.75,31.85V91.6H22.3V86.25c12-3.8,17.68-15,18.73-31.85ZM82.39,95.45a14.39,14.39,0,0,1,12.67,14.23v.22H9.32v-.22A14.39,14.39,0,0,1,22,95.45l.31,0H82.08l.31,0ZM94.9,113.77a12,12,0,0,1,9.48,9.11H0a12,12,0,0,1,9.47-9.11Z"/></svg>
         <div id="heading-buttons">
             <button id="home" class="selected">Domů</button>
@@ -19,6 +19,25 @@
         </div>
     </header>
     <main id="pageI">
+        <section id="uvod-obsah">
+            <div id="obsah">
+                <h2>Obsah:</h2>
+                <ul>
+                    <li><a href="#text">Popis</a></li>
+                    <li><a href="#new-game">Nová hra</a></li>
+                </ul>
+            </div>
+            <img src="websletak.png" alt="letak">
+        </section>
+        <section id="text">
+            <h1>Vítej na Magchessu!</h1>
+            <p>Jsem si jistý, že jsi sem nezavítal náhodou. Zkrátka tomu tak osud chtěl. Chtěl, aby ses dozvěděl o této bezesporu kvalitní stránce.</p>
+            <p>Magchess je stránka, která ti umožní hrát šachy s kamarádem na jednom počítači, sám se sebou, nebo s AI.</p>
+            <p>Při vývoji jsem myslel na customizaci. Můžeš si zvolit jména soupeřů a třeba předstírat zápas Magnuse Carlsena s Kasparovem nebo dokonce s tebou!</p>
+            <p>Nezapomněl jsem ani na uživatelskou přizpůsobivost. Na kartě <a href="tutorial.html">Jak hrát</a> si můžeš přečíst návod, jak se při hře zorientovat. Cože? Tobě se nechce číst? Tak si tam pusť!</p>
+            <p>Pokud si chceš svoji hru zanalyzovat, stránka nabízí export PGN řetězce, který stačí zkopírovat do stránek jako je Chess.com nebo Lichess</p>
+            <h2>Tak na co čekáš? Je čas si zahrát!</h2>
+        </section>
         <section class="new game">
             <h2>Nová hra</h2>
             <div id="new-game">
