--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Jsem si jistý, že jsi sem nezavítal náhodou. Zkrátka tomu tak osud chtěl. Chtěl, aby ses dozvěděl o této bezesporu kvalitní stránce.</p>
             <p>Magchess je stránka, která ti umožní hrát šachy s kamarádem na jednom počítači, sám se sebou, nebo s AI.</p>
             <p>Při vývoji jsem myslel na customizaci. Můžeš si zvolit jména soupeřů a třeba předstírat zápas Magnuse Carlsena s Kasparovem nebo dokonce s tebou!</p>
-            <p>Nezapomněl jsem ani na uživatelskou přizpůsobivost. Na kartě <a href="tutorial.html">Jak hrát</a> si můžeš přečíst návod, jak se při hře zorientovat. Cože? Tobě se nechce číst? Tak si tam pusť!</p>
+            <p>Nezapomněl jsem ani na uživatelskou přizpůsobivost. Na kartě <a href="tutorial.html">Jak hrát</a> si můžeš přečíst návod, jak se při hře zorientovat. Cože? Tobě se nechce číst? Tak si tam pusť video!</p>
             <p>Pokud si chceš svoji hru zanalyzovat, stránka nabízí export PGN řetězce, který stačí zkopírovat do stránek jako je Chess.com nebo Lichess</p>
             <h2>Tak na co čekáš? Je čas si zahrát!</h2>
         </section>
