--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
     </header>
     <main id="pageI">
         <section id="uvod-obsah">
-            <div id="obsah">
-                <h2>Obsah:</h2>
-                <ul>
-                    <li><a href="#text">Popis</a></li>
-                    <li><a href="#new-game">Nová hra</a></li>
-                </ul>
-            </div>
             <img src="websletak.png" alt="letak">
+            <section class="game" id="obsah-box">
+                <div id="obsah">
+                    <h2>Obsah:</h2>
+                    <ul>
+                        <li><a href="#text">Popis</a></li>
+                        <li><a href="#new-game">Nová hra</a></li>
+                    </ul>
+                </div>
+            </section>
         </section>
         <section id="text">
             <h1>Vítej na Magchessu!</h1>
