--- a/tutorial.html
+++ b/tutorial.html
@@ -19,9 +19,11 @@
         </div>
     </header>
     <main id="page2">
+        <section id="text">
         <h1>Tutoriál</h1>
-        <h2>Obsah</h2>
-        <ul>
+        
+        <ul id="obsah-tutorial">
+            <h2>Obsah</h2>
             <li><a href="#navigace">Navigační tlačítka</a></li>
             <li><a href="#newgame">Nová hra</a></li>
             <li><a href="#pohyby">Pohyb figurkou</a></li>
@@ -75,9 +77,10 @@
 
         <h2 id="video">Tutoriálové video</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/SAFfHi4dasI?si=WgpKFhrwXWgSOhAj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+        <a href="https://www.youtube.com/embed/SAFfHi4dasI?si=WgpKFhrwXWgSOhAj">Odkaz na video návod</a>
         <h2>Když už to čteš až sem, tady máš něco za odměnu:</h2>
         <img src="https://pbs.twimg.com/media/E43JZXaXwAEjhzf.png" id="temporary-meme">
+    </section>
     </main>
     <style>
         #temporary-meme {
