--- a/tutorial.html
+++ b/tutorial.html
@@ -77,7 +77,7 @@
 
         <h2 id="video">Tutoriálové video</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/SAFfHi4dasI?si=WgpKFhrwXWgSOhAj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <a href="https://www.youtube.com/embed/SAFfHi4dasI?si=WgpKFhrwXWgSOhAj">Odkaz na video návod</a>
+        <a href="https://www.youtube.com/embed/SAFfHi4dasI?si=WgpKFhrwXWgSOhAj" style="display: none;" id="video-link">Odkaz na video návod</a>
         <h2>Když už to čteš až sem, tady máš něco za odměnu:</h2>
         <img src="https://pbs.twimg.com/media/E43JZXaXwAEjhzf.png" id="temporary-meme">
     </section>
