Names & Tutorial text fix

--- a/tutorial.html
+++ b/tutorial.html
@@ -35,8 +35,8 @@
         <h2 id="navigace">Navigační tlačítka</h2>
         <p>V horní liště se nachází tři tlačítka: Domů, Hrát a Jak hrát. Na stránce 'Jak hrát' se právě nacházíte.</p>
         <ul>
-            <li>Tlačítko Domů vás přesměruje na úvodní stránku popisem stránky a nastavením pro novou hru.</li>
-            <li>Tlačítko Hrát vás přesměruje na stránku, kde si můžete zahrát šachy. Hra bude nastavena na hru za bílého proti počítači o úrovni 3.</li>
+            <li>Tlačítko Domů vás přesměruje na úvodní stránku obsahující popis stránky a nastavení pro novou hru.</li>
+            <li>Tlačítko Hrát vás přesměruje na stránku, kde si můžete zahrát šachy. Hra bude automaticky nastavena na hru za bílého proti počítači o úrovni 3.</li>
             <li>Tlačítko Jak hrát vás přesměruje na tuto stránku.</li>
         </ul>
 
@@ -63,15 +63,15 @@
         <p>Pokud napíšete neplatnou značku, dojde automaticky k povýšení na dámu.</p>
 
         <h2 id="sachmat">Šachmat</h2>
-        <p>V případě nastalého šachmatu Vám o této situace dá informaci hra sama. V tuto chvíli jsou jakékoli tahy zablokované.</p>
+        <p>V případě nastalého šachmatu Vám o této situaci dá informaci hra sama. V tuto chvíli jsou jakékoli tahy zablokované.</p>
 
         <h2 id="remiza">Remíza</h2>
         <p>Remíza je možná v několika případech:</p>
         <ul>
             <li>Pat - situace, kdy hráč nemá žádný legální tah, ale jeho král není v šachu.</li>
             <li>Nedostatek materiálu - situace, kdy žádný z hráčů nemá dostatečný materiál k matování soupeře.</li>
-            <li>Trojí opakování pozice - situace, kdy se stejná pozice opakuje třikrát.</li>
-            <li>Pravidlo 50 tahů - situace, kdy se neudělí žádný pěšcový tah nebo nedojde k braní figury za posledních padesát tahů.</li>
+            <li>Trojí opakování pozice - situace, kdy se stejná pozice všech figur opakuje třikrát.</li>
+            <li>Pravidlo 50 tahů - situace, kdy se neodehraje žádný pěšcový tah a nedojde k braní figury za posledních padesát tahů.</li>
         </ul>
         <p><b>Na této stránce v případě trojího opakování tahu dojde k ukončení hry a remíze automaticky.</b></p>
 
